--- a/index.html
+++ b/index.html
@@ -54,6 +54,58 @@
                         <div class="col-md-12">
                             <span class="float-right logout-top-padding"><img src="images/logout.jpg"></span>
                         </div>
+
+                        <div class="col-md-12">
+                            <div class="col-md-2dot4 whiteBox">
+                                <h6 class="text-center text-justify">Technology Readiness</h6>
+                                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
+                            </div> 
+                            <div class="col-md-2dot4 ffp-img">
+                                <img src="images/ffp-img.jpg">
+                            </div>
+                            <div class="col-md-2dot4 whiteBox">
+                                <h6 class="text-center text-justify">Fit For Purpose</h6>
+                                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
+                            </div> 
+                            <div class="col-md-2dot4 ffp-img">
+                                <img src="images/empathy.jpg">
+                            </div>
+                            <div class="col-md-2dot4 whiteBox">
+                                <h6 class="text-center text-justify">Fit For Purpose</h6>
+                                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
+                            </div> 
+                              
+                        </div>
+                        <div class="col-md-12">
+                            <div class="col-md-2dot4 ffp-img">
+                                <img src="images/tech_redi.jpg">
+                            </div>
+                            <div class="col-md-2dot4 whiteBox">
+                                <h6 class="text-center text-justify">Heuristics</h6>
+                                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
+                            </div> 
+                            <div class="col-md-2dot4 ffp-img">
+                                <img src="images/heuristics.jpg">
+                            </div>
+                            <div class="col-md-2dot4 whiteBox">
+                                <h6 class="text-center text-justify">IT Ops</h6>
+                                <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
+                            </div> 
+                            <div class="col-md-2dot4 ffp-img">
+                                <img src="images/ffp-img.jpg">
+                            </div>  
+                        </div>
+                        <div class="col-md-12">
+                            <div class="text-center" style="background-color:#645896;">
+                                <img src="images/border-shadow.jpg"> 
+                            </div>  
+                        </div>
+
+                        <div class="col-md-12" >
+                            <div class="bottom-icon-box">
+
+                            </div>
+                        </div>
                     </div>
 
                 </div>
