--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="logo">
-                                <a href="#"><img src="images/logo.jpg"></a>
+                                <a href="#"><img src="images/logo1.jpg"></a>
                             </div>
                             <h5 class="text-uppercase h5_color">Transforming Experiance</h5>
                             <p class="text-justify h5_p_font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, perspiciatis. Magni quae facilis voluptatibus? Nisi repellat maxime nesciunt commodi consequatur! Dicta soluta quos saepe voluptatem doloribus voluptates minus minima distinctio!</p>
