--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="bg_gradient">
-        <div class="container-fluid " style=" padding: 0 4rem;">
+        <div class="container-fluid padding-adjustment" >
             <div class="row">
                 <div class="col-md-3">
                     <div class="row">
@@ -96,14 +96,46 @@
                             </div>  
                         </div>
                         <div class="col-md-12">
-                            <div class="text-center" style="background-color:#645896;">
+                            <div class="text-center box-margin-adjust">
                                 <img src="images/border-shadow.jpg"> 
                             </div>  
                         </div>
 
                         <div class="col-md-12" >
-                            <div class="bottom-icon-box">
-
+                            <div class="bottom-icon-box float-left">
+                                <div class="col-md-4 border-right float-left">
+                                    <div class="row">
+                                        <div class="col-4"><img src="images/simp_pers.jpg"></div>
+                                        <div class="col-8">
+                                            <div class="row">
+                                                <div class="col-12"><h3>50%</h3></div>
+                                                <div class="col-12"><p>Simplified & Personalized Engagement</p></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div> 
+                                <div class="col-md-4 border-right float-left">
+                                    <div class="row">
+                                        <div class="col-4"><img src="images/app_usab.jpg"></div>
+                                        <div class="col-8">
+                                            <div class="row">
+                                                <div class="col-12"><h3>60%</h3></div>
+                                                <div class="col-12"><p>Application Usability improved</p></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="col-md-4 float-left">
+                                    <div class="row">
+                                        <div class="col-4"><img src="images/app_int.jpg"></div>
+                                        <div class="col-8">
+                                            <div class="row">
+                                                <div class="col-12"><h3>40%</h3></div>
+                                                <div class="col-12"><p>Application <br>Intuitiveness</p></div>
+                                            </div>
+                                        </div>
+                                    </div> 
+                                </div>   
                             </div>
                         </div>
                     </div>
