--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                     <div class="row">
                         <div class="col-md-12">
                             <div class="logo">
-                                <a href="#"><img src="images/logo1.jpg" width="150" height="100"></a>
+                                <a href="#"><img src="images/logo.jpg" ></a>
                             </div>
                             <h5 class="text-uppercase h5_color">Transforming Experiance</h5>
                             <p class="text-justify h5_p_font">Lorem ipsum dolor sit amet consectetur adipisicing elit. Distinctio, perspiciatis. Magni quae facilis voluptatibus? Nisi repellat maxime nesciunt commodi consequatur! Dicta soluta quos saepe voluptatem doloribus voluptates minus minima distinctio!</p>
@@ -61,6 +61,7 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                <i class="triangle-left"></i>
                                 <img src="images/ffp-img.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
@@ -68,16 +69,18 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                    <i class="triangle-left"></i>
                                 <img src="images/empathy.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
-                                <h6 class="text-center text-justify">Fit For Purpose</h6>
+                                <h6 class="text-center text-justify">Empathy</h6>
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                               
                         </div>
                         <div class="col-md-12">
                             <div class="col-md-2dot4 ffp-img">
+                                <i class="triangle-down"></i>
                                 <img src="images/tech_redi.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
@@ -85,6 +88,7 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                <i class="triangle-right"></i>
                                 <img src="images/heuristics.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
@@ -92,6 +96,7 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                    <i class="triangle-right"></i>
                                 <img src="images/ffp-img.jpg">
                             </div>  
                         </div>
