--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                <i class="triangle-left"></i>
                                 <img src="images/ffp-img.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
@@ -68,16 +69,18 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                    <i class="triangle-left"></i>
                                 <img src="images/empathy.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
-                                <h6 class="text-center text-justify">Fit For Purpose</h6>
+                                <h6 class="text-center text-justify">Empathy</h6>
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                               
                         </div>
                         <div class="col-md-12">
                             <div class="col-md-2dot4 ffp-img">
+                                <i class="triangle-down"></i>
                                 <img src="images/tech_redi.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
@@ -85,6 +88,7 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                <i class="triangle-right"></i>
                                 <img src="images/heuristics.jpg">
                             </div>
                             <div class="col-md-2dot4 whiteBox">
@@ -92,6 +96,7 @@
                                 <p class="text-left">Lorem ipsum dolor sit amet consectetur adipis icing elit. Eos, sed facilis necessi tatibus </p>
                             </div> 
                             <div class="col-md-2dot4 ffp-img">
+                                    <i class="triangle-right"></i>
                                 <img src="images/ffp-img.jpg">
                             </div>  
                         </div>
